# financial-complaint-analytics-nlp-agent

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-ml.txt  requirements.txt
.github/workflows/: ci.yml
api/: main.py
app/: streamlit_app.py
assets/: architecture_mermaid.md
configs/: config.yaml
data/sample/: complaints_sample_1000.csv
docs/: architecture.md  data_dictionary.md  deployment_guide.md  interview_talking_points.md  job_market_alignment.md  model_card.md  powerbi_dashboard_spec.md
knowledge_base/policies/: complaint_triage_policy.md  credit_reporting_policy.md  debt_collection_policy.md  fraud_and_identity_theft_policy.md  mortgage_servicing_policy.md
models/: baseline_tfidf_logreg.joblib  policy_faiss.index  policy_metadata.json
notebooks/: README.md
reports/: baseline_metrics.json  uploaded_data_profile.md
scripts/: export_powerbi_tables.py  make_sample.py  run_training_pipeline.py  train_baseline_demo.py
src/complaint_ai/agents/: priority.py  response_agent.py
src/complaint_ai/data/: ingest.py  preprocess.py  schema.py
src/complaint_ai/features/: text_features.py
src/complaint_ai/models/: predict.py  train_baseline.py  train_lstm.py  train_lstm_attention.py  train_transformer.py
src/complaint_ai/monitoring/: drift.py
src/complaint_ai/rag/: build_index.py  retriever.py
src/complaint_ai/utils/: config.py  paths.py
tests/: test_preprocessing.py
